# ce-it-hub-hackathon-2025

./: .dockerignore  .env.example  .gitignore  404.html  DEPLOY.md  DEVELOPMENT.md  Dockerfile  LICENSE  QR_CODE_TESTING.md  README.md  STATIC_FILES_TROUBLESHOOTING.md  TODO.md  TRANSLATIONS.md  create_nginx_dir.sh  docker-compose.yaml  docker-entrypoint.sh  expiry_notifications.env  fix_docker_compose_version.sh  fix_network_ip.sh  index.html  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.sh  setup_local_nginx.sh
.github/workflows/: build_and_deploy_documentation copy.yaml  build_and_deploy_documentation.yaml  deploy_docs.yml  deploy_en_docs.yml  (+1 more)
EXPIRY_NOTIFICATIONS/: index.html
PASSWORD_RESET/: index.html
deploy/: index.html
docs/: admin.md  authentication.md  export.md  features.md  getting_started.md  index.md  inventory.md  model.md  qr_codes.md  todo.md  translation_preservation.md  user_profile.md
examples/: expiry_notifications.env
features/: index.html
ksp/: asgi.py  env.py  settings.py  urls.py  wsgi.py
maintenance/: index.html
nginx/: Dockerfile  nginx.conf
scripts/: check_expiring_items.sh  check_reset_domain.py  check_reset_domain.sh  fix_ksp_translation.sh  fix_translation.py  manage_django.sh  rebuild_static.sh  set_network_ip.sh  setup_password_reset.sh  test_notification_time.sh  update.sh  update_site_domain.sh
search/: search_index.json
templates/: base.html  language_switcher.html
user_guide/: index.html
warehouse/: admin.py  apps.py  backends.py  forms.py  models.py  scheduler.py  urls.py  views.py
(+128 files in other folders)
