[project]
name = "hackathon25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "django-widget-tweaks>=1.5.0",
    "python-dotenv>=1.0.0",
    "qrcode>=7.0",
    "reportlab>=4.0.0",
    "xlsxwriter>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "pytest-django>=4.11.1",
]

[tool.ruff.format]
quote-style = "single"
