[project]
name = "hackathon25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs[i18n]>=1.6.1",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "qrcode>=7.0",
    "reportlab>=4.0.0",
    "xlsxwriter>=3.0",
]

[dependency-groups]
dev = ["ruff>=0.11.9"]

[tool.ruff.format]
quote-style = "single"
